# seamless_entropy

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build_and_publish.yml  build_and_publish_wheels.yml  poetry_numba_test.yml  poetry_pure_python_test.yml  poetry_scipy_test.yml  publish_sdist.yml  pure_python_from_sdist.yml  test_package_install_from_build.yml  test_package_numba_from_sdist.yml  test_package_numba_from_wheel.yml  test_package_pure_python_from_sdist.yml  test_package_pure_python_from_wheel.yml  test_package_scipy_from_sdist.yml  test_package_scipy_from_wheel.yml  test_poetry_install.yml  test_poetry_install_with_c.yml  test_poetry_install_without_c.yml
seamless_entropy/: __init__.py  helpers.py  pure_python.py
src/: entropy.c  entropy_c_module.c
test/: test_config.py
test_packages/entropy_numba_from_build/test/: test_function.py
test_packages/entropy_numba_from_sdist/: pyproject.toml
test_packages/entropy_pure_python_from_sdist/: pyproject.toml
test_packages/entropy_scipy_from_build/: pyproject.toml
