[project]
name = "entropy-pure-python-from-sdist"
version = "0.1.0"
description = "A package which installs the entropy package from sdist and does not have scipy or numba."
authors = [
    {name = "Jack Grahl",email = "jack.grahl@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numba (>=0.61.0,<0.62.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
